style: fix category tag positioning and size on cards to avoid wrapping text

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -11,7 +11,7 @@
 }
 
 .cards {
-  --offset-left: 20px;
+  --offset-left: 10px;
 }
 
 .cards > ul {
@@ -74,7 +74,7 @@
   font-family: var(--heading-font-family);    
   position: absolute;
   line-height: 1.7;
-  inset: 10px auto auto 20px;
+  inset: 10px auto auto var(--offset-left);
   border-radius: 14px;
   display: inline-block;
   padding: 0 14px;
